Java Solaris Communities Sun Store Join SDN My Profile Why Join?
 
Bug Database
Bug Detail
Quick Lists
Top 25 Bugs
Top 25 RFE's
Recently Closed Bugs
Printable Page Printable Page


Bug Database
Bug ID: 6307603
Votes 2
Synopsis [X11] Use RENDER extension for complex operations done in software
Category java:classes_2d
Reported Against
Release Fixed
State 3-Accepted, request for enhancement
Priority: 4-Low
Related Bugs
Submit Date 08-AUG-2005
Description
A DESCRIPTION OF THE REQUEST :
The current X11 pipeline does a lot of things on software, even AA-Text or other AA-operations on native surfaces are painfully slow, as are non-opaque operations or gradients, as far as I experienced the X11 pipeline is the slowest pipeline.
All these operations could be done by using the XRENDER extension which has been shipped XORG since some years.

Although I think the OGL pipeline is really great and very powerful I am in doubt it can become the standard used on X11 powerd boxes since currently opengl drivers are very broken and many features the pipeline relies on are not available on lower-end hardware like integrated  customer  gpus or sis cards (for which RENDER already works quite well).

Since the whole software-fallbacks are already working it would be great to see just commonly used operations to be accerlated (like AA test, non-opaque fills, transculent iamges stuff like this).

JUSTIFICATION :
Because many common operations are not accerlated by the X11 pipeline and require VI -> Software -> Rendering -> VI "roundtrips".
This includes even on Desktops heavily used operations like AA-Test or AA-draws and non opaque fills.

EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Fully accerlated by XRENDER, only fallbacks in corner cases for which XRENDER has no support.
ACTUAL -
many operations are done in software, which is extremly slow when rendering to a "native" surface since the data has to be fetched from the x-server.

CUSTOMER SUBMITTED WORKAROUND :
Use the OpenGL pipeline (does only work on 10% of our test machines properly), use software-rendering only (BufferedImage) or do not use unaccerlated operations at all.
Posted Date : 2005-08-08 11:25:58.0
Work Around
N/A
Evaluation
XRender support is still somewhat variable in availability and performance.
Over remote X11 it could be useful for some cases and in fact we already
internally opened an RFE to investigate using it for AA text.
5086814 :RFE: Java 2D: consider Xrender for anti-aliased text on remote X11
Posted Date : 2005-08-08 15:15:57.0
Comments
  
  Include a link with my name & email   

Submitted On 09-AUG-2005
linuxhippy
With the availability of more drivers supporting xorg's new accerlation architecture (EAX) things seem better than ever.
Also NVidia cards accerlate XRender very well, since they did not rely on XAA.


Submitted On 31-JAN-2009
linuxhippy
a long, long time ago ;)



PLEASE NOTE: JDK6 is formerly known as Project Mustang