6307603: [X11] Use RENDER extension for complex operations done in software

Reviewed-by: bae, igor, prr